--- a/style.css
+++ b/style.css
@@ -35,6 +35,18 @@
     margin-bottom: 15px;
 }
 
+.mrg-btm2 {
+    margin-bottom: 50px;
+}
+
+.mrg-btm3 {
+    margin-bottom: 80px;
+}
+
+.mrg-top2 {
+    margin-top: 50px;
+}
+
 .no-pdg {
     padding: 0%;
 }
@@ -60,7 +72,18 @@
     text-align: start;
 }
 
+.txt-new-exit {
+    font-size: 18px;
+    line-height: 25px;
+}
 
+.txt-plus {
+    font-size: 20px;
+}
+
+.txt-now {
+    font-size: 16px;
+}
 
 /* HEADER */
 .top-header {
@@ -122,7 +145,7 @@
 
 /* CONSOLE SECTION */
 .console-section {
-    margin: 40px;
+    margin: 40px 0;
 }
 
 .ps-5 {
@@ -172,7 +195,7 @@
 }
 
 .takes-two-section img {
-    width: 270px;
+    width: 65%;
     margin-bottom: 30px;
 }
 
@@ -200,3 +223,149 @@
     border-radius: 10px;
 }
 
+/* EXPLORATION SECTION */
+.exploration-section {
+    margin: 80px 0;
+}
+
+.exploration-section img {
+    width: 100%;
+    object-fit: cover;
+}
+
+.ps4-box {
+    margin: 100px 0;
+}
+
+.exploration-section .btn-primary {
+    background-color: #0072ce;
+    border-radius: 20px;
+}
+
+/* PS PLUS SECTION */
+.ps-plus-section {
+    background-color: #bebcbb;
+}
+
+.ps-plus-section .btn-light {
+    color: #0072ce;
+    background-color: rgba(255, 255, 255, .5);
+    border: 0px;
+    border-radius: 20px;
+}
+
+.ps-plus-section .btn:hover {
+    background-color: #0072ce;
+    color: white;
+}
+
+.plus-img {
+    width: 65%;
+    object-fit: cover;
+}
+
+.soul-img {
+    width: 100%;
+    object-fit: cover;
+}
+
+/* SALE SECTION */
+.sale-section {
+    margin: 80px 0;
+}
+
+.sale-img {
+    width: 100%;
+    object-fit: cover;
+}
+
+/* PS NOW SECTION */
+.ps-now-section {
+    background-color: #161c3b;
+}
+
+.ps-now-section .btn-light {
+    color: black;
+    background-color: white;
+    border: 0px;
+    border-radius: 20px;
+}
+
+.ps-now-section .btn:hover {
+    background-color: #0072ce;
+    color: white;
+}
+
+.now-img {
+    width: 65%;
+    object-fit: cover;
+}
+
+.avengers-img {
+    width: 100%;
+    object-fit: cover;
+}
+
+/* SOCIAL SECTION */
+.social-section {
+    margin: 80px 0;
+}
+
+.social-img {
+    width: 100%;
+    object-fit: cover;
+}
+
+/* FOOTER */
+footer {
+    width: 100%;
+    background-color: #00439c;
+}
+
+.footer-container {
+    padding: 80px 0;
+}
+
+.footer-container ul {
+    list-style: none;
+}
+
+.footer-container ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+.ps-img-footer {
+    width: 15%;
+}
+
+.globe-img {
+    width: 3%;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.txt-under {
+    text-decoration: underline;
+}
+
+.org-img {
+    width: 25%;
+}
+
+@media screen and (max-width: 767px) {
+
+    .avengers-img {
+        display: none;
+    }
+    
+    .soul-img {
+        display: none;
+    }
+
+    .bottom-title {
+        display: none;
+    }
+
+
+}
