--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@
 }
 
 /* HEADER */
+header {
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+}
+
 .top-header {
     background-color: black;
     display: flex;
@@ -93,12 +99,38 @@
     align-items: center;
 }
 
-.top-header p {
-    font-family: 'Scheherazade New', serif;
-    color: white;
-    margin: 0%;
-    font-size: 20px;
-    margin: 5px 15px;
+.top-header img {
+    width: 4%;
+    margin: 10px 20px;
+}
+
+.d-flex .nav-link {
+    color: black;
+}
+
+.d-flex .btn-secondary {
+    background-color: #363636;
+    border-radius: 30px;
+    border: 0px;
+}
+
+.d-flex img {
+    width: 10%;
+    margin-left: 10px;
+    margin-right: 15px;
+}
+
+header .navbar-light {
+    background-color: white;
+}
+
+header .navbar-light .navbar-nav .nav-link {
+    color: black;
+}
+
+.logo-header {
+    width: 3%;
+    margin-right: 10px;
 }
 
 /* MAIN */
