--- a/style.css
+++ b/style.css
@@ -158,8 +158,7 @@ header .navbar-light .navbar-nav .nav-link {
 }
 
 .text-returnal .btn-primary:hover {
-    transform: scale(.8);
-    border: 2px solid #0072ce;
+    transform: scale(.9);
 }
 
 .btn-brd {
@@ -227,6 +226,10 @@ header .navbar-light .navbar-nav .nav-link {
     border-radius: 20px;
 }
 
+.console-section .btn-primary:hover {
+    transform: scale(.9);
+}
+
 /* IT TAKES TWO SECTION */
 .takes-two-section {
     position: relative;
@@ -267,6 +270,10 @@ header .navbar-light .navbar-nav .nav-link {
     border-radius: 10px;
 }
 
+.takes-two-section .btn-primary:hover {
+    transform: scale(.9);
+}
+
 /* EXPLORATION SECTION */
 .exploration-section {
     margin: 80px 0;
@@ -286,6 +293,10 @@ header .navbar-light .navbar-nav .nav-link {
     border-radius: 20px;
 }
 
+.exploration-section .btn-primary:hover {
+    transform: scale(.9);
+}
+
 /* PS PLUS SECTION */
 .ps-plus-section {
     background-color: #bebcbb;
@@ -301,6 +312,7 @@ header .navbar-light .navbar-nav .nav-link {
 .ps-plus-section .btn:hover {
     background-color: #0072ce;
     color: white;
+    transform: scale(.9);
 }
 
 .plus-img {
@@ -338,6 +350,7 @@ header .navbar-light .navbar-nav .nav-link {
 .ps-now-section .btn:hover {
     background-color: #0072ce;
     color: white;
+    transform: scale(.9);
 }
 
 .now-img {
